--- a/geolocation-fc.conf
+++ b/geolocation-fc.conf
@@ -4,7 +4,7 @@ type = geolocation feature collector api
 developed_by = Milan Straka<milan(dot)straka(at)fri(dot)uniza(dot)sk> and Lubos Buzna <lubos(dot)buzna(at)fri(dot)uniza(dot)sk>
 
 [cache]
-host = localhost
+host = cache
 port = 6379
 
 [running]
